@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<!-- Translated using Transifex web application. For support, or if you would like to to help out, please visit your language team! -->
+<!-- Albanian language-Team URL: http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/sq/ -->
+<!-- Report language file syntax bugs at: http://trac.xbmc.org/ -->
+
+<strings>
+    <string id="30000">Përdor rendin e "DVD'së"</string>
+    <string id="30001">Përdor renditjen absolute (Sezon i veçantë)</string>
+    <string id="30002">Aktivo "Fanart'in"</string>
+    <string id="30003">Prefero Posterë</string>
+    <string id="30004">Gjuha</string>
+</strings>
