@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<!-- Translated using Transifex web application. For support, or if you would like to to help out, please visit your language team! -->
+<!-- Malay language-Team URL: http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/ms/ -->
+<!-- Report language file syntax bugs at: http://trac.xbmc.org/ -->
+
+<strings>
+    <string id="30000">Gunakan susunan DVD</string>
+    <string id="30001">Gunakan susunan mutlak (untuk satu musim)</string>
+    <string id="30002">Membolehkan Fanart</string>
+    <string id="30003">Poster pilihan</string>
+    <string id="30004">Bahasa</string>
+</strings>
