@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <!-- Translated using Transifex web application. For support, or if you would like to to help out, please visit your language team! -->
-<!-- Basque language-Team URL: http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/eu/ -->
+<!-- Uzbek language-Team URL: http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/uz/ -->
 <!-- Report language file syntax bugs at: http://trac.xbmc.org/ -->
 
 <strings>
-    <string id="30002">Gaitu Fanarta</string>
-    <string id="30004">Hizkuntza</string>
+    <string id="30004">Til</string>
 </strings>
