@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<!-- Translated using Transifex web application. For support, or if you would like to to help out, please visit your language team! -->
+<!-- Vietnamese language-Team URL: http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/vi/ -->
+<!-- Report language file syntax bugs at: http://trac.xbmc.org/ -->
+
+<strings>
+    <string id="30000">Sử dụng DVD Order</string>
+    <string id="30001">Sử dụng sắp đặt cố định (Theo Season)</string>
+    <string id="30002">Sử dụng Fanart</string>
+    <string id="30003">Ưu tiên các poster</string>
+    <string id="30004">Ngôn ngữ</string>
+</strings>
