@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<!-- Translated using Transifex web application. For support, or if you would like to to help out, please visit your language team! -->
+<!-- Welsh language-Team URL: http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/cy/ -->
+<!-- Report language file syntax bugs at: http://trac.xbmc.org/ -->
+
+<strings>
+    <string id="30000">Defnyddio Trefn DVD</string>
+    <string id="30001">Defnyddio Trefnu Absoliwt (Un Tymor)</string>
+    <string id="30002">Galluogi Celf Selogion</string>
+    <string id="30003">Cyfeirio Cofnodwyr</string>
+    <string id="30004">Iaith</string>
+</strings>
